a lot of work was done to clean up the database and make mature the APIs now I've learned a better way to load config into UE